# mezel_example

./: .bazelignore  .gitignore  BUILD.bazel  WORKSPACE  build.sbt
src/main/scala/example/: BUILD.bazel  Main.scala
