load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "toolchain_impl",
    enable_diagnostics_report = True,
    enable_semanticdb = True,
    scalacopts = [
        "-encoding",
        "UTF-8",
        "-Wconf:cat=other-implicit-type:s",
        "-Wdead-code",
        "-Wextra-implicit",
        "-Wunused:explicits",
        "-Xfatal-warnings",
    ],
)

toolchain(
    name = "toolchain",
    toolchain = "toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type"
)
